--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,7 +4,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="colorAccent">#0d253f</color>
+    <color name="colorAccent">#01b4e4</color>
 <!--    <color name="colorAccent">#009DFF</color>-->
     <color name="red">@android:color/holo_red_dark</color>
     <color name="black1">#80000000</color>
