--- a/app/src/main/res/layout/fragment_appbar_list.xml
+++ b/app/src/main/res/layout/fragment_appbar_list.xml
@@ -8,13 +8,14 @@
         android:id="@+id/appbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        style="@style/LightAppBarLayout"
         app:liftOnScroll="true">
 
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:titleTextColor="@color/white"/>
+            app:titleTextColor="@color/black"/>
 
     </com.google.android.material.appbar.AppBarLayout>
 
